# buteo-syncfw-qml

./: CMakeLists.txt
Buteo/: CMakeLists.txt  buteo-sync-qml.cpp  buteo-sync-qml.h  plugin.cpp  plugin.h  qmldir
cmake/: lcov.cmake
debian/: changelog  control  copyright
tests/qml/: CMakeLists.txt  buteo-syncfw.py  tst_ButeoSyncFW.qml
